--- a/src/StoreBundle/Resources/views/User/show.html.twig
+++ b/src/StoreBundle/Resources/views/User/show.html.twig
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Password</th>
-                <td>{{ entity.password }}</td>
+                <td>{{ entity.password|slice(0,20) }}</td>
             </tr>
             <tr>
                 <th>Salt</th>
