--- a/src/StoreBundle/Resources/views/User/index.html.twig
+++ b/src/StoreBundle/Resources/views/User/index.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.username }}</td>
-                <td>{{ entity.password }}</td>
+                <td>{{ entity.password|slice(0,20) }}</td>
                 <td>{{ entity.salt }}</td>
                 <td>{% if entity.joined %}{{ entity.joined|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>
