--- a/src/StoreBundle/Resources/views/Orders/new.html.twig
+++ b/src/StoreBundle/Resources/views/Orders/new.html.twig
@@ -1,4 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends 'StoreBundle::layout.html.twig' %}
+
+
+{% block title %}
+    SHOPPING-CART Beppe's Pizza Shop
+{% endblock %}
 
 {% block body -%}
     <h1>Orders creation</h1>
