--- a/src/StoreBundle/Resources/views/Product/index.html.twig
+++ b/src/StoreBundle/Resources/views/Product/index.html.twig
@@ -28,6 +28,10 @@
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.disponible }}</td>
                 <td>{{ entity.image }}</td>
+                
+
+
+                <td>{{ entity.image }}</td>
                 <td>
                 <ul>
                     <li>
@@ -47,6 +51,7 @@
         {% endfor %}
         </tbody>
     </table>
+
 
         <ul>
         <li>
