--- a/src/StoreBundle/Resources/views/Default/index.html.twig
+++ b/src/StoreBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,30 @@
-{% extends '::base.html.twig' %}
+{% extends 'StoreBundle::layout.html.twig' %}
 
-{% block body -%}
-    <h1>Homepage</h1>
+{% block title %}
+    Beppe's Pizza Shop - Home
+
+{% endblock %}
+
+{% block content %}
+
+	<p style="text-align:center">Benvenuti da Beppe!</p>
+
+	<img alt="Onze originele houtoven!" src="{{ asset('images/pizzaoven.jpg') }}" style="
+	position:relative;
+	width:655px;
+	height:365px;
+	border-width:5px;	
+    border-style:outset;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;"
+    />
+
+
+
+	<br>
+	<p style="text-align:center">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." </p>
 
 
 {% endblock %}
+
