--- a/src/StoreBundle/Resources/views/layout.html.twig
+++ b/src/StoreBundle/Resources/views/layout.html.twig
@@ -30,7 +30,7 @@
                             <ul class="menu">
                                 <li><a href="{{ path('store_homepage') }}">Home</a></li>
                                 <li><a href="{{ path('product') }}">Pizza Online bestellen</a></li>
-                                <li><a href="{{ path('product') }}">La Nostra Storia</a></li>
+                                <li><a href="{{ path('storia') }}">La Nostra Storia</a></li>
                                 <li class="last"><a href="{{ path('product') }}">Contacts</a></li>
                                 <li><a href="{{ path('product') }}">Login</a></li>                                
                             </ul>
@@ -41,11 +41,21 @@
         </header>
 
         <br><br>
-        <div style="margin-right:200px;margin-left:200px;"
+
+
+        <div class="inner">
+            <div class="main">
+               
     {% block content %}
 
     {% endblock %}
+               
+
+            </div>
         </div>
+        <div class="block"></div>
+
+   
 
     {% block javascripts %}  
     <script src="{{ asset('js/jquery-1.6.3.min.js') }}" type="text/javascript"></script>
