--- a/src/StoreBundle/Resources/views/layout.html.twig
+++ b/src/StoreBundle/Resources/views/layout.html.twig
@@ -55,6 +55,9 @@
         </div>
         <div class="block"></div>
 
+<footer class="site-footer">
+  I'm the Sticky Footer.
+</footer>
    
 
     {% block javascripts %}  
