--- a/src/StoreBundle/Resources/views/Cart/cart.html.twig
+++ b/src/StoreBundle/Resources/views/Cart/cart.html.twig
@@ -8,10 +8,10 @@
 
 <table>
   {% for i in range(1, quantity) %}
-  	<th>{{ products[product_id] }}</th>
+  	<th>{{ products[product_id-1] }}</th>
   	
  	<td>
-      	<img alt="" src="{{ asset('images/pizza-' ~ (product_id+1) ~ '.jpg') }}" class="cart-items" id="item_{{ product_id }}_{{ i }}" style="position:relative;width:125px" />
+      	<img alt="" src="{{ asset('images/pizza-' ~ (product_id) ~ '.jpg') }}" class="cart-items" id="item_{{ product_id }}_{{ i }}" style="position:relative;width:125px" />
       	<br>
       	<a title="Remove this item" href="{{ path('cart_remove', {'id': product_id}) }}">verwijder product</a>
       </td>
@@ -19,7 +19,7 @@
 
 </table>
 
-  <span>({{ quantity }} {{ products[product_id] }})</span>
+  <span>({{ quantity }} {{ products[product_id-1] }})</span>
 
 
 </div>
