--- a/web/css/style.css
+++ b/web/css/style.css
@@ -109,8 +109,9 @@ h1 {
 }
 	h1 a {
 		display:block; 
-		width:500px;
-		height:100px;
+		width:400px;
+		height:185px;
+		margin-top:-15px;
 		text-indent:-9999px;
 		background:url(../images/logo.png) 0 0 no-repeat;
 	}
